--- a/index.html
+++ b/index.html
@@ -6,14 +6,33 @@
     <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'">
     <title>Hello World!</title>
-    <script src="./renderer.js"></script>
+
 </head>
 
 <body>
-    <h1>Hello World!</h1>
-    We are using Node.js <span id="node-version"></span>,
-    Chromium <span id="chrome-version"></span>,
-    and Electron <span id="electron-version"></span>.
+    <h1>Shutdown app</h1>
+    <div>
+        <div>
+            <h2 id="time-display">
+
+            </h2>
+            <p>
+                Add Record
+            </p>
+            <div>
+                <input type="number" />
+                <button id="shutdown-btn">
+                    Shutdown
+                </button>
+                <button id="hibernate-btn">
+                    Hibernate
+                </button>
+            </div>
+        </div>
+
+
+    </div>
+    <script src="./renderer.js"></script>
 </body>
 
 </html>
