--- a/index.html
+++ b/index.html
@@ -20,7 +20,15 @@
                 Add Record
             </p>
             <div>
-                <input type="number" />
+                <input type="number" id="hour-input" class="" min="0" max="23" value="0" />
+                <input type="number" id="min-input" class="" min="0" max="59" value="0" />
+                <input type="number" id="sec-input" class="" min="0" max="59" value="0" />
+                <p id="test-text">
+
+                </p>
+                <button id="check-btn">
+                    Check
+                </button>
                 <button id="shutdown-btn">
                     Shutdown
                 </button>
