--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
                 <button id="hibernate-btn">
                     Hibernate
                 </button>
+                <button id="cancel-btn">
+                    Cancel
+                </button>
             </div>
         </div>
 
